Last part to add and finish.

--- a/intro_concepts.ipynb
+++ b/intro_concepts.ipynb
@@ -2,23 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maulik\n"
+     ]
     }
    ],
    "source": [
     "lallu = ['barack hussein obama ii', 'bə-rahk hoo-sayn oh-bah-mə', 'august', 'american politician', '44th president', 'democratic party', 'african-american', 'u.s.', 'obama', 'u.s.', 'illinois', 'illinois', 'state senator', 'civil rights lawyer', 'university lecturer', 'obama', 'hawaii', 'columbia', 'b.a', 'political science', 'community organizer', 'chicago', 'obama', 'harvard', 'law school', 'black president', 'harvard', 'review', 'civil rights attorney', 'constitutional law', 'chicago', 'law school', 'elective politics', 'obama', 'illinois', 'u.s.', 'close primary campaign', 'hillary clinton', 'democratic party', 'joe biden']\n",
-    "len(lallu)"
+    "len(lallu)\n",
+    "print('Maulik')\n"
    ]
   }
  ],
